# bean-whisperer

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  clawhub-publish.yml  semgrep.yml  validate-skill.yml
.semgrep/: openclaw-skill.yml
examples/: anaerobic-turbo.json  dark-declining.json  geisha-allonge.json  light-washed-bloom.json  medium-lever.json  sir-lancelots-lever.json
references/: barista-persona.md  espresso-knowledge.md  lance-hedrick-methodology.md  profile-schema.json  websocket-api.md
scripts/: discord-profiles.py  gaggimate-ws.py  generate-profile.py
